# godot-qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
project/: godot-qt.tscn  icon.svg.import  project.godot
project/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache10  filesystem_update4  godot-qt.tscn-editstate-1f34be84fe3e65bf33f22ae6aceb543b.cfg  project_metadata.cfg
project/.godot/imported/: ambulance.obj-51f9cd214620003f85feb0f901c10dee.md5  ambulance.obj-51f9cd214620003f85feb0f901c10dee.mesh  box.obj-299daefc120380034738f529d1a9f70f.md5  box.obj-299daefc120380034738f529d1a9f70f.mesh  colormap.png-f762d8affafb2cc272c6e792f2f38394.ctex  colormap.png-f762d8affafb2cc272c6e792f2f38394.md5  colormap.png-f762d8affafb2cc272c6e792f2f38394.s3tc.ctex  cone-flat.obj-89ec286d9d21cb1edb3bccc6c7faf48b.md5  cone-flat.obj-89ec286d9d21cb1edb3bccc6c7faf48b.mesh  cone.obj-5368ec7769befaa05f72e81f4673dd27.md5  cone.obj-5368ec7769befaa05f72e81f4673dd27.mesh  debris-bolt.obj-d848b9b8e5ddca7225b6c42dd22e6f4d.md5  debris-bolt.obj-d848b9b8e5ddca7225b6c42dd22e6f4d.mesh  debris-bumper.obj-ee78799bbd6d24e1b622c3131f5808ac.md5  debris-bumper.obj-ee78799bbd6d24e1b622c3131f5808ac.mesh  debris-door-window.obj-a0184c787411a36fb118f138f203a8b1.md5  debris-door-window.obj-a0184c787411a36fb118f138f203a8b1.mesh  debris-door.obj-0673f6cb64493663476f242ca1110270.md5  debris-door.obj-0673f6cb64493663476f242ca1110270.mesh  debris-drivetrain-axle.obj-11ff8977fb5f3734591674af01dcc2ca.md5  debris-drivetrain-axle.obj-11ff8977fb5f3734591674af01dcc2ca.mesh  debris-drivetrain.obj-370eba670fc0678d67e355a4280e9eb1.md5  debris-drivetrain.obj-370eba670fc0678d67e355a4280e9eb1.mesh  debris-nut.obj-c736fd1de7478bf822abba5197c410bf.md5  debris-nut.obj-c736fd1de7478bf822abba5197c410bf.mesh  debris-plate-a.obj-39afd39970f0721463f9d37a782eaf65.md5  debris-plate-a.obj-39afd39970f0721463f9d37a782eaf65.mesh  debris-plate-b.obj-a4459d385f777bdee3df2d9b87555d23.md5  debris-plate-b.obj-a4459d385f777bdee3df2d9b87555d23.mesh  debris-plate-small-a.obj-52c1ea646fd42b29a54fb8ddf4e8b5c6.md5  debris-plate-small-a.obj-52c1ea646fd42b29a54fb8ddf4e8b5c6.mesh  debris-plate-small-b.obj-164bedfef97a4660f3f149c51aef44a4.md5  debris-plate-small-b.obj-164bedfef97a4660f3f149c51aef44a4.mesh  debris-spoiler-a.obj-3f0356d13516b55ae267f761411dde4b.md5  debris-spoiler-a.obj-3f0356d13516b55ae267f761411dde4b.mesh  debris-spoiler-b.obj-d449912d80dca9e630e1d557f595f8de.md5  debris-spoiler-b.obj-d449912d80dca9e630e1d557f595f8de.mesh  debris-tire.obj-82f81b061dfa3cf915a649c895a54cc9.md5  debris-tire.obj-82f81b061dfa3cf915a649c895a54cc9.mesh  delivery-flat.obj-ee76479c983dc45021641d87bfbcf7e3.md5  (+63 more)
project/cars/: ambulance.obj.import  box.obj.import  cone-flat.obj.import  cone.obj.import  debris-bolt.obj.import  debris-bumper.obj.import  debris-door-window.obj.import  debris-door.obj.import  debris-drivetrain-axle.obj.import  debris-drivetrain.obj.import  debris-nut.obj.import  debris-plate-a.obj.import  debris-plate-b.obj.import  debris-plate-small-a.obj.import  debris-plate-small-b.obj.import  debris-spoiler-a.obj.import  debris-spoiler-b.obj.import  debris-tire.obj.import  delivery-flat.obj.import  delivery.obj.import  firetruck.obj.import  garbage-truck.obj.import  hatchback-sports.obj.import  kart-oobi.obj.import  kart-oodi.obj.import  kart-ooli.obj.import  kart-oopi.obj.import  kart-oozi.obj.import  police.obj.import  race-future.obj.import  race.obj.import  sedan-sports.obj.import  sedan.obj.import  suv-luxury.obj.import  suv.obj.import  taxi.obj.import  tractor-police.obj.import  tractor-shovel.obj.import  tractor.obj.import  truck-flat.obj.import  (+10 more)
project/cars/Textures/: colormap.png.import
project/resources/: new_box_mesh.tres  new_plane_mesh.tres
project/scripts/: autoload.gd  autoload.gd.uid  box.gd  box.gd.uid  godot_qt.gd.uid  sub_viewport.gd  sub_viewport.gd.uid
scripts/: build_godot.ps1
src/: GodotBridge.h  GodotVKItem.h  main.cc
src/qml/: main.qml
